--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "css-loader": "^5.2.6",
     "express": "^4.17.1",
+    "mongoose": "^5.13.2",
     "nodemon": "^2.0.9",
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
